--- a/EventosKotlin/app/src/main/AndroidManifest.xml
+++ b/EventosKotlin/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EventosKotlin">
         <activity
+            android:name=".Ej03BotonCambiaBotonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReutilizandoCallbackActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Ej02ContadoresActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Ej01VariantesCallbackActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
